# ToyRenderer

./: ..gitignore.un~  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: AbstractLight.h  AbstractModel.h  Assimp_Loader.h  Camera.h  CommonSettings.h  DirLight.h  GeoTransform.h  Light.h  Mesh.h  Model.h  ModelFactory.h  PointLight.h  Renderer.h  Scene.h  Shader.h  Texture.h  Vertex.h  stb_image.h
include/Geometry/: HEMesh.h
include/glad/: glad.h
resources/Shaders/Light/: light.frag
resources/Shaders/Simple/: 1.frag  1.vert
resources/Shaders/light_experiments/: Basic.frag  Bling-Phong.frag  LightMap.frag  Material.frag  Material.vert  MultiLight.frag  MultiLight.vert  ShadowMap.frag  ShadowMap.vert
src/: main.cpp
src/Geometry/: HEMesh.cpp
src/Renderer/: AbstractLight.cpp  AbstractModel.cpp  Assimp_loader.cpp  CMakeLists.txt  Camera.cpp  DirLight.cpp  Drawable.cpp  GeoTransform.cpp  Light.cpp  Mesh.cpp  Model.cpp  ModelFactory.cpp  PointLight.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  glad.c
